@@ -283,6 +283,7 @@ x2goclient (4.0.4.0-0x2go1) UNRELEASED; urgency=low
       the help message.
     - help.cpp: add support for newlines within descriptions.
     - help.cpp: use new newline feature for some options.
+    - help.cpp: trying to split at hyphens was a bad idea. Remove that part.
 
   [ Fernando Pedemonte ]
   * New upstream release (4.0.4.0):
